Fix colors for dark mode

--- a/styles/scss/colors.scss
+++ b/styles/scss/colors.scss
@@ -1,6 +1,5 @@
 @media (prefers-color-scheme: dark) {
   :root {
-    --color: #f6f6f6;
     --background-color: #20242f;
     --code-color: #f6f6f6;
     --line-bar-background-color: #313335;
@@ -10,7 +9,6 @@
 
 @media (prefers-color-scheme: light) {
   :root {
-    --color: #20242f;
     --background-color: #f6f6f6;
     --code-color: #20242f;
     --line-bar-background-color: #f6f6f6;
